--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Get version from pubspec.yaml
         id: get_version
-        run: echo ::set-output name=version::$(grep -o 'version:.*' pubspec.yaml | sed 's/version: *//')
+        run: echo "::set-output name=version::$(grep -o 'version:.*' pubspec.yaml | sed 's/version: *//' | tr -d ' ')"
 
       - name: Build for Android
         run: |
